jekyll naming conflict

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
 	<div style="display:table;text-align:center;margin:auto;margin-top: 150px">
-		<img src="_images/platypus.png" style="width:100%; max-width:500px;">
+		<img src="assets/platypus.png" style="width:100%; max-width:500px;">
 		<h1>Platypus Blue</h1>
 		<p>Great things come to those who wait...</p>
 	</div>
