changed index copy

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 </head>
 
 <body>
-	<div style="display:table;text-align:center;margin:auto;margin-top: 150px">
+	<div style="display:table;text-align:center;margin:auto;margin-top: 150px; ">
 		<img src="assets/platypus.png" style="width:100%; max-width:500px;">
 		<h1>Platypus Blue</h1>
-		<p>Great things come to those who wait...</p>
+		<div style="max-width:400px;margin:auto">The platypus (Ornithorhynchus anatinus), also known as the duck-billed platypus, is a semiaquatic egg-laying mammal endemic to eastern Australia, including Tasmania.</br></br>And also an art collective. Documentation to come.</div>
 	</div>
 
 </body>
